--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,7 @@
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
   <!-- TODO #1 - Use a loop to display job results in a table. -->
-
+<th:block th:fragment="jobListTable">
   <table class="job-listing" th:each="job : ${jobs}">
     <tr>
       <td>ID</td>
@@ -44,7 +44,7 @@
     </tr>
 
   </table>
-
+</th:block>
 
 
 </div>
